--- a/VulkanDemo/MIAOMIAOMIAO/MIAOMIAOMIAO.vcxproj
+++ b/VulkanDemo/MIAOMIAOMIAO/MIAOMIAOMIAO.vcxproj
@@ -151,6 +151,8 @@
     <ClCompile Include="Core\ImageView.cpp" />
     <ClCompile Include="Core\Instance.cpp" />
     <ClCompile Include="Core\QueueFamily.cpp" />
+    <ClCompile Include="Core\RasterizerGraphicsPipeline.cpp" />
+    <ClCompile Include="Core\Shader.cpp" />
     <ClCompile Include="Core\Surface.cpp" />
     <ClCompile Include="Core\SwapChain.cpp" />
     <ClCompile Include="Core\Vulkan.cpp" />
@@ -163,10 +165,13 @@
     <ClInclude Include="Core\ImageView.h" />
     <ClInclude Include="Core\Instance.h" />
     <ClInclude Include="Core\QueueFamily.h" />
+    <ClInclude Include="Core\RasterizerGraphicsPipeline.h" />
+    <ClInclude Include="Core\Shader.h" />
     <ClInclude Include="Core\Surface.h" />
     <ClInclude Include="Core\SwapChain.h" />
     <ClInclude Include="Core\Vulkan.h" />
     <ClInclude Include="Core\Window.h" />
+    <ClInclude Include="Geometry\Vertex.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
