adding render pass

--- a/VulkanDemo/MIAOMIAOMIAO/MIAOMIAOMIAO.vcxproj.filters
+++ b/VulkanDemo/MIAOMIAOMIAO/MIAOMIAOMIAO.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="Core\RasterizerGraphicsPipeline.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Core\RenderPass.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common\Common.h">
@@ -84,6 +87,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Geometry\Vertex.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Core\RenderPass.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
