--- a/VulkanDemo/MIAOMIAOMIAO/MIAOMIAOMIAO.vcxproj
+++ b/VulkanDemo/MIAOMIAOMIAO/MIAOMIAOMIAO.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="Core\Instance.cpp" />
     <ClCompile Include="Core\QueueFamily.cpp" />
     <ClCompile Include="Core\RasterizerGraphicsPipeline.cpp" />
+    <ClCompile Include="Core\RenderPass.cpp" />
     <ClCompile Include="Core\Shader.cpp" />
     <ClCompile Include="Core\Surface.cpp" />
     <ClCompile Include="Core\SwapChain.cpp" />
@@ -166,6 +167,7 @@
     <ClInclude Include="Core\Instance.h" />
     <ClInclude Include="Core\QueueFamily.h" />
     <ClInclude Include="Core\RasterizerGraphicsPipeline.h" />
+    <ClInclude Include="Core\RenderPass.h" />
     <ClInclude Include="Core\Shader.h" />
     <ClInclude Include="Core\Surface.h" />
     <ClInclude Include="Core\SwapChain.h" />
