--- a/VulkanDemo/MIAOMIAOMIAO/MIAOMIAOMIAO.vcxproj
+++ b/VulkanDemo/MIAOMIAOMIAO/MIAOMIAOMIAO.vcxproj
@@ -147,7 +147,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Core\DepthBuffer.cpp" />
     <ClCompile Include="Core\Device.cpp" />
+    <ClCompile Include="Core\Framebuffer.cpp" />
     <ClCompile Include="Core\ImageView.cpp" />
     <ClCompile Include="Core\Instance.cpp" />
     <ClCompile Include="Core\QueueFamily.cpp" />
@@ -162,7 +164,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common\Common.h" />
+    <ClInclude Include="Core\DepthBuffer.h" />
     <ClInclude Include="Core\Device.h" />
+    <ClInclude Include="Core\Framebuffer.h" />
     <ClInclude Include="Core\ImageView.h" />
     <ClInclude Include="Core\Instance.h" />
     <ClInclude Include="Core\QueueFamily.h" />
