--- a/VulkanDemo/MIAOMIAOMIAO/MIAOMIAOMIAO.vcxproj
+++ b/VulkanDemo/MIAOMIAOMIAO/MIAOMIAOMIAO.vcxproj
@@ -148,8 +148,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Core\DepthBuffer.cpp" />
+    <ClCompile Include="Core\DescriptorSetLayout.cpp" />
+    <ClCompile Include="Core\DescriptorsManager.cpp" />
     <ClCompile Include="Core\Device.cpp" />
     <ClCompile Include="Core\Framebuffer.cpp" />
+    <ClCompile Include="Core\Image.cpp" />
     <ClCompile Include="Core\ImageView.cpp" />
     <ClCompile Include="Core\Instance.cpp" />
     <ClCompile Include="Core\QueueFamily.cpp" />
@@ -165,8 +168,11 @@
   <ItemGroup>
     <ClInclude Include="Common\Common.h" />
     <ClInclude Include="Core\DepthBuffer.h" />
+    <ClInclude Include="Core\DescriptorSetLayout.h" />
+    <ClInclude Include="Core\DescriptorsManager.h" />
     <ClInclude Include="Core\Device.h" />
     <ClInclude Include="Core\Framebuffer.h" />
+    <ClInclude Include="Core\Image.h" />
     <ClInclude Include="Core\ImageView.h" />
     <ClInclude Include="Core\Instance.h" />
     <ClInclude Include="Core\QueueFamily.h" />
