--- a/VulkanDemo/MIAOMIAOMIAO/MIAOMIAOMIAO.vcxproj
+++ b/VulkanDemo/MIAOMIAOMIAO/MIAOMIAOMIAO.vcxproj
@@ -158,9 +158,11 @@
     <ClCompile Include="Core\Image.cpp" />
     <ClCompile Include="Core\ImageView.cpp" />
     <ClCompile Include="Core\Instance.cpp" />
+    <ClCompile Include="Core\Memory.cpp" />
     <ClCompile Include="Core\QueueFamily.cpp" />
     <ClCompile Include="Core\RasterizerGraphicsPipeline.cpp" />
     <ClCompile Include="Core\RenderPass.cpp" />
+    <ClCompile Include="Core\Semaphore.cpp" />
     <ClCompile Include="Core\Shader.cpp" />
     <ClCompile Include="Core\Surface.cpp" />
     <ClCompile Include="Core\SwapChain.cpp" />
@@ -181,9 +183,11 @@
     <ClInclude Include="Core\Image.h" />
     <ClInclude Include="Core\ImageView.h" />
     <ClInclude Include="Core\Instance.h" />
+    <ClInclude Include="Core\Memory.h" />
     <ClInclude Include="Core\QueueFamily.h" />
     <ClInclude Include="Core\RasterizerGraphicsPipeline.h" />
     <ClInclude Include="Core\RenderPass.h" />
+    <ClInclude Include="Core\Semaphore.h" />
     <ClInclude Include="Core\Shader.h" />
     <ClInclude Include="Core\Surface.h" />
     <ClInclude Include="Core\SwapChain.h" />
