--- a/VulkanDemo/KAWAII/KAWAII.vcxproj.filters
+++ b/VulkanDemo/KAWAII/KAWAII.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="Common\Singleton.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Common\Macro.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
