--- a/VulkanDemo/KAWAII/KAWAII.vcxproj
+++ b/VulkanDemo/KAWAII/KAWAII.vcxproj
@@ -145,24 +145,29 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ApplicationEntry\ApplicationEntry.cpp" />
+    <ClCompile Include="Application\Application.cpp" />
     <ClCompile Include="Common\Singleton.cpp" />
     <ClCompile Include="Core\KeyInput.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Math\Math.cpp" />
+    <ClCompile Include="VulkanWrapper\DeviceObjectBase.cpp" />
     <ClCompile Include="VulkanWrapper\Instance.cpp" />
     <ClCompile Include="VulkanWrapper\PhysicalDevice.cpp" />
     <ClCompile Include="VulkanWrapper\Device.cpp" />
+    <ClCompile Include="VulkanWrapper\Queue.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ApplicationEntry\ApplicationEntry.h" />
+    <ClInclude Include="Application\Application.h" />
+    <ClInclude Include="Base\Base.h" />
     <ClInclude Include="Common\Macro.h" />
     <ClInclude Include="Common\Singleton.h" />
     <ClInclude Include="Core\KeyInput.h" />
     <ClInclude Include="Math\Math.h" />
+    <ClInclude Include="VulkanWrapper\DeviceObjectBase.h" />
     <ClInclude Include="VulkanWrapper\Instance.h" />
     <ClInclude Include="VulkanWrapper\PhysicalDevice.h" />
     <ClInclude Include="VulkanWrapper\Device.h" />
+    <ClInclude Include="VulkanWrapper\Queue.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
